--- a/search/Dockerfile
+++ b/search/Dockerfile
@@ -1,4 +1,4 @@
-# PyTorch needed for CLIP
+# Start with an nvidia cuda container that supports 3000 series GPUs
 FROM nvidia/cuda:11.2.2-base-ubuntu20.04 AS clifs
 
 ARG MODEL=RN50x4
@@ -13,9 +13,10 @@ RUN apt-get update && apt-get install -y git python3-opencv python3-pip
 COPY app/requirements.txt .
 RUN pip3 install -r requirements.txt
 
-# Try Version 1.8.2
+# Use PyTorch Version 1.8.2
 RUN pip3 install torch==1.8.2+cu111 torchvision==0.9.2+cu111 torchaudio==0.8.2 -f https://download.pytorch.org/whl/lts/1.8/torch_lts.html
 
+# Newer version of CLIP adds support for this pytorch version
 RUN pip3 install --upgrade git+https://github.com/openai/CLIP.git
 
 # Preload the chosen model -- device doesn't matter here
